--- a/asp_source/appsettings.Development.json
+++ b/asp_source/appsettings.Development.json
@@ -34,7 +34,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BRATO\\SQLEXPRESS;Initial Catalog=TFU_BaseManagement;Integrated Security=True;MultipleActiveResultSets=True;Trusted_Connection=True"
+    "DefaultConnection": "Data Source=BRATO\\SQLEXPRESS;Initial Catalog=TFU_GLocalShoes;Integrated Security=True;MultipleActiveResultSets=True;Trusted_Connection=True"
   },
   "Facebook": {
     "AppId": "123",
@@ -86,7 +86,7 @@
   "DefaultEmailConfig": {
     "Host": "smtp-relay.gm2ail.com",
     "Post": 587,
-    "Username": "213verification@ranus.vn",
+    "Username": "213verification@admin.vn",
     "Password": "123Ranus34*("
   },
   "DingTalk": {
