--- a/asp_source/appsettings.Development.json
+++ b/asp_source/appsettings.Development.json
@@ -34,7 +34,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BRATO\\SQLEXPRESS;Initial Catalog=TFU_GLocalShoes;Integrated Security=True;MultipleActiveResultSets=True;Trusted_Connection=True"
+    "DefaultConnection": "Data Source=TH3M1ND\\TAMNGUYEN;Initial Catalog=TFU_GLocalShoes;Integrated Security=True;MultipleActiveResultSets=True;Trusted_Connection=True"
   },
   "Facebook": {
     "AppId": "123",
